--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,10 +14,10 @@ steps:
     inputs:
       versionSpec: "10.x"
     displayName: "Install Node.js"
-  - task: ArchiveFiles@1
-    inputs:
-      rootFolderOrFile: "$(System.DefaultWorkingDirectory)"
-      includeRootFolder: false
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    verbose: true
 
   - script: |
       npm install
