--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "howler": "^2.1.1",
+    "firebase": "^6.4.0",
+    "howler": "^2.1.2",
     "material-design-icons": "^3.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-scripts": "2.1.8",
     "styled-components": "^4.3.2",
     "w3m": "^1.0.20"
